part2/conf/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: edhommee/app2:dev
        ports:
        - containerPort: 3006
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  ports:
  - port: 80
    targetPort: 3006
    name: tcp
  selector:
    app: app2
